# yoso

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  main.yml  pre-commit.yml
densepose/data/: build.py  dataset_mapper.py  image_list_dataset.py  inference_based_loader.py
densepose/data/datasets/: chimpnsee.py  coco.py  lvis.py
densepose/data/samplers/: densepose_base.py  densepose_confidence_based.py  densepose_cse_base.py
densepose/data/video/: video_keyframe_dataset.py
densepose/evaluation/: tensor_storage.py
densepose/modeling/: filter.py
densepose/modeling/cse/: vertex_direct_embedder.py
densepose/modeling/losses/: segm.py
densepose/modeling/roi_heads/: deeplab.py  roi_head.py
densepose/structures/: chart.py  data_relative.py  list.py  transform_data.py
densepose/utils/: dbhelper.py
densepose/vis/: base.py  bounding_box.py  densepose_outputs_iuv.py  densepose_outputs_vertex.py  densepose_results.py
detectron2/checkpoint/: catalog.py
detectron2/data/: benchmark.py  build.py  catalog.py  common.py  dataset_mapper.py  detection_utils.py
detectron2/data/datasets/: builtin.py  builtin_meta.py  cityscapes.py  cityscapes_panoptic.py  coco.py  coco_panoptic.py  lvis.py  pascal_voc.py
detectron2/data/samplers/: distributed_sampler.py
detectron2/data/transforms/: augmentation.py  augmentation_impl.py
detectron2/evaluation/: coco_evaluation.py  lvis_evaluation.py
detectron2/export/: flatten.py  shared.py
detectron2/layers/: batch_norm.py  deform_conv.py  losses.py  wrappers.py
detectron2/modeling/: poolers.py
detectron2/modeling/backbone/: resnet.py  vit.py
detectron2/modeling/meta_arch/: fcos.py  retinanet.py
detectron2/modeling/roi_heads/: rotated_fast_rcnn.py
detectron2/solver/: lr_scheduler.py
detectron2/structures/: masks.py
detectron2/tracking/: bbox_iou_tracker.py  iou_weighted_hungarian_bbox_iou_tracker.py
detectron2/utils/: comm.py  logger.py  memory.py  testing.py
gradio_demo/: app.py  apply_net.py
gradio_demo/densepose/converters/: base.py  chart_output_hflip.py  chart_output_to_chart_result.py  segm_to_mask.py  to_chart_result.py  to_mask.py
gradio_demo/densepose/evaluation/: densepose_coco_evaluation.py  evaluator.py  mesh_alignment_evaluator.py  tensor_storage.py
gradio_demo/densepose/modeling/: hrfpn.py  hrnet.py  inference.py  test_time_augmentation.py
gradio_demo/densepose/modeling/cse/: embedder.py  vertex_feature_embedder.py
gradio_demo/densepose/modeling/losses/: chart.py  chart_with_confidences.py  cse.py  embed.py  (+4 more)
gradio_demo/densepose/structures/: chart_confidence.py  cse.py  cse_confidence.py
gradio_demo/densepose/vis/: base.py  densepose_data_points.py  densepose_outputs_iuv.py  densepose_results_textures.py  extractor.py
gradio_demo/detectron2/checkpoint/: c2_model_loading.py  detection_checkpoint.py
gradio_demo/detectron2/config/: compat.py  instantiate.py  lazy.py
gradio_demo/detectron2/engine/: defaults.py  launch.py  train_loop.py
gradio_demo/detectron2/evaluation/: cityscapes_evaluation.py  evaluator.py  rotated_coco_evaluation.py  sem_seg_evaluation.py
gradio_demo/detectron2/export/: c10.py  caffe2_export.py  caffe2_modeling.py  flatten.py  torchscript.py  torchscript_patch.py
gradio_demo/detectron2/layers/: aspp.py
gradio_demo/detectron2/model_zoo/: model_zoo.py
gradio_demo/detectron2/modeling/: anchor_generator.py  box_regression.py  matcher.py  mmdet_wrapper.py
gradio_demo/detectron2/solver/: build.py
gradio_demo/detectron2/structures/: boxes.py  rotated_boxes.py
gradio_demo/detectron2/tracking/: vanilla_hungarian_bbox_iou_tracker.py
gradio_demo/detectron2/utils/: analysis.py  env.py  events.py  tracing.py  video_visualizer.py  visualizer.py
ip_adapter/: __init__.py  attention_processor.py
preprocess/humanparsing/mhp_extension/: make_crop_and_mask_w_mask_nms.py
preprocess/humanparsing/modules/: bn.py  functions.py  misc.py  residual.py
preprocess/humanparsing/utils/: consistency_loss.py  criterion.py  encoding.py  kl_loss.py  miou.py  schp.py  transforms.py  warmup_scheduler.py
preprocess/openpose/: run_openpose.py
requirements/: requirements.txt
src/: attentionhacked_tryon.py  transformerhacked_garmnet.py  transformerhacked_tryon.py  unet_block_hacked_tryon.py  unet_hacked_tryon.py
yoso/: download_model.py  evaluation.py  kaggle.py
yoso/demo/: app.py
yoso/gradio_demo/: app.py  utils_mask.py
yoso/ip_adapter/: ip_adapter.py  resampler.py  test_resampler.py
yoso/preprocess/humanparsing/: parsing_api.py  run_parsing.py
yoso/src/: attentionhacked_garmnet.py  tryon_pipeline.py  unet_block_hacked_garmnet.py  unet_hacked_garmnet.py
(+207 files in other folders)
