[project]
name = "yoso"
version = "0.0.1"
description = "You only shoot once."
authors = [
  { name = "Trinh Quoc Anh", email = "trinhquocanh94@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = "==3.10.*"

dependencies = [
    # PyTorch stack (CUDA 11.8)
    "torch==2.0.1+cu118",
    "torchvision==0.15.2+cu118",
    "torchaudio==2.0.2+cu118",

    # HF ecosystem (compatible versions)
    "transformers==4.36.2",
    "diffusers==0.25.0",
    "huggingface-hub>=0.19.3,<0.26",

    # Training & metrics
    "accelerate==0.25.0",
    "torchmetrics==1.2.1",

    # Utils & infra
    "tqdm==4.66.1",
    "einops==0.8.1",
    "bitsandbytes==0.39.0",
    "scipy==1.11.1",
    "opencv-python",
    "gradio==4.24.0",
    "fvcore",
    "cloudpickle",
    "omegaconf",
    "pycocotools",
    "basicsr",
    "av",
    "onnxruntime==1.23.0",
    "pydantic==2.10.6",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
